#36334 Fix default privileges for PostgreSQL